## [Unreleased]
### Added
- Added the trait `PartialEq` to Sppparse's structs
- Added the trait `SparsableTrait` to serde_json::Value
- Changed how the proc macro resolve its crate name
- Added a public function to get the `SparsePointedValue` from `SparseRefRaw`
- Added the `semver` feature, adding support for `semver::{Version, VersionReq}`
- Changed how the `SparseValueMut` is constructed.
- Added a function to resolve a new pointer at runtime using a `SparseValue` or a `SparseValueMut`
- Removed bounds on structs
- Changed `check_depth`: now accepts `&self` as the first argument
## [0.1.1] - 2021-01-20
### Added
- Support for `Option<T>`
- The `url` feature, adding support for `url::Url`

## [0.1.0] - 2021-01-18
### Added

- 🎉 first (veeeeeeeery alpha) release!