@@ -1,0 +1,7 @@
+{
+	"hello": "world",
+	"obj": {
+		"key1": "#/hello",
+		"key2": "#/obj/key1"
+	}
+}
