@@ -9,6 +9,8 @@
 - Added a function to resolve a new pointer at runtime using a `SparseValue` or a `SparseValueMut`
 - Removed bounds on structs
 - Changed `check_depth`: now accepts `&self` as the first argument
+- Added `SparseRefRawInline` to deserialize inline reference
+
 ## [0.1.1] - 2021-01-20
 ### Added
 - Support for `Option<T>`
